# Samus

./: .gitignore  Cargo.toml  README.md
src/: config.rs  context.rs  error.rs  main.rs  resource.rs  simple_client.rs  task.rs  task_old.rs
src/actor/: metrics.rs  mod.rs  system.rs
src/benches/: actor_bench.rs  event_store_bench.rs  file_ops_bench.rs  mod.rs
src/cqrs/: command.rs  event_store.rs  mod.rs  snapshot.rs
src/fs/: mod.rs  operations.rs  watcher.rs
src/integrations/: mock_vscode.rs  mod.rs
src/integrations/editor/: decoration_controller.rs  diff_view_provider.rs  mod.rs
src/mcp/: client.rs  mod.rs  protocol.rs  server_manager.rs  task_executor.rs
src/perf/: benchmark.rs  cpu.rs  mod.rs  ui.rs
src/perf/tests/: integration.rs
src/services/: mod.rs
src/services/file/: actor.rs  buffer.rs  cache.rs  mod.rs
src/services/ripgrep/: mod.rs
src/services/tree_sitter/: mod.rs  queries.rs  service_init.rs
src/shell/: advanced.rs  command.rs  mod.rs  terminal.rs
src/task/: mod.rs  shell_task.rs  tree_sitter_task.rs
src/tests/: actor_tests.rs  event_store_tests.rs  file_ops_tests.rs  mod.rs
src/tools/: apply_diff.rs  code_search.rs  dir_tree.rs  mod.rs  read_file.rs  tree_parser.rs
src/ui/: app.rs  diff.rs  input.rs  logo.rs  mod.rs  output.rs  search.rs  search_view.rs  task_types.rs  tasks.rs  terminal.rs  tui.rs
