[package]
name = "samus"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
async-trait = "0.1.77"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
similar = { version = "2.4.0", features = ["inline"] }
syntect = "5.1.0"
regex = "1.10.3"
fuzzy-matcher = "0.3.7"
dashmap = "5.5.3"
thiserror = "1.0.56"

# Performance optimization dependencies
parking_lot = "0.12"
metrics = "0.21"
metrics-util = "0.15"
rayon = "1.8"
cached = { version = "0.46", features = ["proc_macro", "async"] }
reqwest = { version = "0.12.15", features = ["json"] }
dotenv = "0.15.0"
