[package]
name = "samus"
version = "0.1.0"
edition = "2024"

[dependencies]
# Tree-sitter dependencies
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-markdown = "0.7.1"

# Core dependencies
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = { version = "0.24.0", features = ["all-widgets", "crossterm"], default-features = false }
termion = "2.0.3"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
async-trait = "0.1.77"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
similar = { version = "2.4.0", features = ["inline"] }
syntect = "5.1.0"
regex = "1.10.3"
fuzzy-matcher = "0.3.7"
dashmap = "5.5.3"
thiserror = "1.0.56"
anyhow = "1.0.79"

# Performance optimization dependencies
lazy_static = "1.4"
parking_lot = "0.12"
metrics = "0.21"
metrics-util = "0.15"
rayon = "1.8"
cached = { version = "0.46", features = ["proc_macro", "async"] }
reqwest = { version = "0.12.15", features = ["json"] }
dotenv = "0.15.0"
tempfile = "3.10.1"
